--- a/src/experience/sections/screen/screens.css
+++ b/src/experience/sections/screen/screens.css
@@ -1,26 +1,55 @@
 .screen-container {
-  overflow: hidden;
-  overflow-y: scroll;
-  background: rgb(0, 0, 0);
-  color: white;
-  padding: 100px;
-}
-
-.screen-container h1 {
-  font-size: 10rem;
-}
-
-.screen-container p {
-  margin-top: 5rem;
-  font-size: 6.6rem;
-}
-
-@media only screen and (max-width: 599px) {
+    overflow: hidden;
+    overflow-y: scroll;
+    background: rgb(0, 0, 0);
+    color: white;
+    padding: 100px;
+    text-rendering: optimizeLegibility; /* This property aids in text rendering */
+    -webkit-font-smoothing: antialiased; /* This smoothens the text on WebKit browsers */
+    -moz-osx-font-smoothing: grayscale; /* This specifies font smoothing for Firefox on macOS */
+  }
+  
   .screen-container h1 {
-    font-size: 16rem;
+    font-size: 9rem;
+    margin-bottom: 2rem;
   }
-
+  
   .screen-container p {
-    font-size: 10rem;
+    margin-top: 8rem;
+    font-size: 6.6rem;
   }
-}
+  
+  .screen-container ul {
+    font-size: 8rem;
+    margin-top: 2rem;
+    padding-left: 2rem;
+  }
+  
+  .screen-container ul li {
+    margin-bottom: 1rem;
+  }
+  
+  .screen-container ul ul {
+    margin-top: 1rem;
+    padding-left: 2rem;
+    font-size: 7rem;
+  }
+  
+  @media only screen and (max-width: 599px) {
+    .screen-container h1 {
+      font-size: 14rem;
+    }
+  
+    .screen-container p {
+      font-size: 10rem;
+    }
+  
+    .screen-container ul {
+      font-size: 10rem;
+    }
+  
+    .screen-container ul ul {
+      font-size: 9rem;
+    }
+  }
+  
